--- a/terminal.html
+++ b/terminal.html
@@ -10,10 +10,12 @@
     <br>
     <p style='font-size:15px'>Choose what you want</p>
 
-    <p style='font-size:15px'><a href="http://google.com" title="google" ><img src="google.png" width="50%" href="http://google.com"></a></p>
+    <p><a href="http://google.com" title="google" ><img src="google.png" width="50%" href="http://google.com"></a></p>
 
-    <p style='font-size:15px'><a href="http://naver.com" title="naver"><img src="naver.png" width="50%"></a></p>
-    
-    <p style='font-size:15px'><a href="http://nate.com" title="nate""><img src="nate.png" width="50%"></a></p>
+    <p><a href="http://naver.com" title="naver"><img src="naver.png" width="50%"></a></p>
+
+    <p><a href="http://nate.com" title="nate""><img src="nate.png" width="50%"></a></p>
+
+    <p style='font-size:15px'><a href="https://comic.naver.com/webtoon/detail.nhn?titleId=670143&no=206&weekday=wed">헬퍼 01.01</a></p>
   </body>
 </html>
