--- a/terminal.html
+++ b/terminal.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>terminal</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155195942-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-155195942-1');
+    </script>
   </head>
 
   <body target="_blank" link="blue" vlink="red">
@@ -17,5 +26,7 @@
     <p><a href="http://nate.com" title="nate""><img src="nate.png" width="50%"></a></p>
 
     <p style='font-size:15px'><a href="https://comic.naver.com/webtoon/detail.nhn?titleId=670143&no=206&weekday=wed">헬퍼 01.01</a></p>
+    <p><iframe width="560" height="315" src="https://www.youtube.com/embed/O6jjb2w5das" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+    <p><iframe width="560" height="315" src="https://www.youtube.com/embed/AHaDXvA7Esg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
   </body>
 </html>
